# OMX-custom

./: README.md  pyproject.toml
examples/: _shared.py
examples/basics/: test_base.py  test_gripper.py  test_joint1.py  test_joint2.py  test_joint3.py  test_joint4.py  test_pose_from_image.py
examples/diagnosis/: diagnose_xl330.py  probe_xl330_motion.py
robot-control/: index.html  package-lock.json  package.json  vite.config.ts
robot-control/scripts/: dev.mjs
robot-control/src/: main.tsx  styles.css
robot_control_server/: server.py
src/omx_control/: __init__.py  arm.py  constraints.py  joints.py  rustypot_factory.py
src/omx_control.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/omx_control/config/: joints.yaml
tests/: test_constraints.py  test_mixed_controllers.py  test_robot_server_runtime.py
tests/fixtures/: custom_joints.yaml
